--- a/match-match-game/pages/about/style.css
+++ b/match-match-game/pages/about/style.css
@@ -34,6 +34,7 @@ header {
   text-align: center;
   letter-spacing: 1.25px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .upper_logo {
@@ -63,6 +64,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 nav {
