--- a/match-match-game/pages/about/style.css
+++ b/match-match-game/pages/about/style.css
@@ -1,3 +1,19 @@
+@font-face {
+	font-family: 'Roboto';
+	src: url('../../assets/fonts/Roboto-Regular.eot');
+	src: local('☺'), url('../../assets/fonts/Roboto-Regular.woff') format('woff'), url('../../assets/fonts/Roboto-Regular.ttf') format('truetype'), url('../../assets/fonts/Roboto-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../../assets/fonts/Roboto-Medium.eot');
+	src: local('☺'), url('../../assets/fonts/Roboto-Medium.woff') format('woff'), url('../../assets/fonts/Roboto-Medium.ttf') format('truetype'), url('../../assets/fonts/Roboto-Medium.svg') format('svg');
+	font-weight: 500;
+	font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +23,7 @@
 html, body {
   margin: 0 auto;
   width: 1440px;
+  font-family: Roboto;
 }
 
 /* header start */
@@ -17,7 +34,7 @@ header {
   background-color: #2196F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
   display: flex;
-  justify-content: space-between;
+  justify-content: baseline;
 }
 
 .logo {
@@ -25,7 +42,6 @@ header {
   margin-left: 24px;
   width: 80px;
   height: 40px;
-  font-family: Roboto;
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
@@ -55,6 +71,11 @@ header {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.empty_card {
+  width: 96px;
+  height: 64px;
+}
+
 .navbar__card {
   width: 96px;
   height: 64px;
@@ -68,7 +89,9 @@ header {
 }
 
 nav {
-  width: 288px;
+  width: 576px;
+  margin-left: 56px;
+  margin-right: 477px;
 }
 
 nav ul {
@@ -83,14 +106,22 @@ a:link{
   text-decoration: none;
 }
 
+.navbar__card.active img {
+  width: 20px;
+  height: 20px;
+}
+
 .navbar__card img {
   width: 24px;
   height: 24px;
 }
 
-.navbar__card a {
+.navbar__card.active a {
   margin-top: 7px;
-  font-family: Roboto;
+}
+
+.navbar__card a {
+  margin-top: 5px;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
@@ -117,7 +148,6 @@ a:link{
 
 .header_btn a{
   padding: 10px 16px;
-  font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -127,3 +157,106 @@ a:link{
 }
 
 /* header end */
+
+/* about start */
+
+.about {
+  margin-top: 33px;
+  height: 960px;
+}
+
+.wrapper {
+  margin: 0 auto;
+  width: 1000px;
+  height: 802px;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+}
+
+.content {
+  margin-left: 36px;
+}
+
+.about_title {
+  padding-top: 28px;  
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+  mix-blend-mode: normal;
+}
+
+.about_instruction {
+  margin-top: 20px;
+  display: flex;
+}
+
+.steps {
+  height: 642px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.steps_row {
+  width: 780px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.step {
+  background: #FFFFFF;
+  width: 360px;
+  display: flex;
+}
+
+.step_image {
+  margin: 13px 12px;
+  width: 50px;
+  height: 51px;
+  background-image: url('../../assets/icons/circle.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.number {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 21px;
+  letter-spacing: 0.25px;
+  color: #FFFFFF;
+}
+
+.step span {
+  width: 272px;
+  margin: 16px 16px 0px 0px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.25px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.first_step {
+  height: 230px;
+}
+
+.second_step {
+  height: 132px;
+}
+
+.third_step {
+  height: 240px;
+}
+
+.image img{
+  width: auto;
+  height: auto;
+}
+/* about end   */
