--- a/match-match-game/pages/about/style.css
+++ b/match-match-game/pages/about/style.css
@@ -53,7 +53,7 @@ header {
   cursor: pointer;
 }
 
-.upper_logo {
+.upper-logo {
   padding: 3px 0px;
   width: 80px;
   height: 20px;
@@ -62,7 +62,7 @@ header {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.lower_logo {
+.lower-logo {
   padding: 3px 0px;
   width: 80px;
   height: 20px;
@@ -71,7 +71,7 @@ header {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.empty_card {
+.empty-card {
   width: 96px;
   height: 64px;
 }
@@ -177,7 +177,7 @@ a:link{
   margin-left: 36px;
 }
 
-.about_title {
+.about__title {
   padding-top: 28px;  
   font-weight: 500;
   font-size: 20px;
@@ -189,7 +189,7 @@ a:link{
   mix-blend-mode: normal;
 }
 
-.about_instruction {
+.about__instructions {
   margin-top: 20px;
   display: flex;
 }
@@ -213,7 +213,7 @@ a:link{
   display: flex;
 }
 
-.step_image {
+.step__image {
   margin: 13px 12px;
   width: 50px;
   height: 51px;
@@ -243,15 +243,15 @@ a:link{
   color: rgba(0, 0, 0, 0.6);
 }
 
-.first_step {
+.first-step {
   height: 230px;
 }
 
-.second_step {
+.second-step {
   height: 132px;
 }
 
-.third_step {
+.third-step {
   height: 240px;
 }
 
