--- a/match-match-game/pages/about/style.css
+++ b/match-match-game/pages/about/style.css
@@ -106,22 +106,13 @@ a:link{
   text-decoration: none;
 }
 
-.navbar__card.active img {
-  width: 20px;
-  height: 20px;
-}
-
 .navbar__card img {
   width: 24px;
   height: 24px;
 }
 
-.navbar__card.active a {
-  margin-top: 7px;
-}
-
-.navbar__card a {
-  margin-top: 5px;
+.navbar__card span {
+  margin-top: 9px;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
