--- a/match-match-game/src/components/card/card.css
+++ b/match-match-game/src/components/card/card.css
@@ -14,8 +14,14 @@
 }
 
 .card {
-  width: 168px;
-  height: 168px;
+  /* width: auto; */
+  /* height: auto; */
+  /* width: 168px; */
+  /* height: 168px; */
+  /* width: 150px; */
+  /* height: 256px; */
+  width: 102px;
+  height: 175px;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
   position: relative;
   transform-style: preserve-3d;
@@ -36,12 +42,18 @@
 }
 
 .card-back {
-  background: #FFFFFF;
+  background: black;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card-front {
   transform: rotateY(180deg);
-  background-image: url("../../assets/images/game/default-back.png");
+  background: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 
