--- a/match-match-game/src/components/page-wrapper/page-wrapper.css
+++ b/match-match-game/src/components/page-wrapper/page-wrapper.css
@@ -1,7 +1,7 @@
 .wrapper {
   margin: 0 auto;
   width: 1000px;
-  height: 802px;
+  min-height: 802px;
   background: rgba(0, 0, 0, 0.05);
   border-radius: 5px;
 }
