--- a/match-match-game/src/components/navbar-card/navbar-card.css
+++ b/match-match-game/src/components/navbar-card/navbar-card.css
@@ -1,4 +1,4 @@
-.navbar__card {
+.navbar-card {
   width: 96px;
   height: 64px;
   left: 96px;
@@ -8,4 +8,23 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+a:link{
+  text-decoration: none;
+}
+
+.navbar-card img {
+  width: 24px;
+  height: 24px;
+}
+
+.navbar-card span {
+  margin-top: 9px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: 0.4px;
+  color: rgba(255, 255, 255, 0.7);
 }
