--- a/match-match-game/src/styles.css
+++ b/match-match-game/src/styles.css
@@ -1,3 +1,23 @@
+@font-face {
+	font-family: 'Roboto';
+	src: url(./assets/fonts/Roboto-Regular.eot);
+	src: local('☺'), url(./assets/fonts/Roboto-Regular.woff) format('woff'),
+  url(./assets/fonts/Roboto-Regular.ttf) format('truetype'),
+  url(./assets/fonts/Roboto-Regular.svg) format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url(./assets/fonts/Roboto-Medium.eot);
+	src: local('☺'), url(./assets/fonts/Roboto-Medium.woff) format('woff'),
+  url(./assets/fonts/Roboto-Medium.ttf) format('truetype'),
+  url(./assets/fonts/Roboto-Medium.svg) format('svg');
+	font-weight: 500;
+	font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
