--- a/match-match-game/src/components/button/button.css
+++ b/match-match-game/src/components/button/button.css
@@ -1,4 +1,5 @@
 .button {
+  font-family: 'Roboto';
   cursor: pointer;
   border: none;
   border-radius: 4px;
@@ -15,12 +16,4 @@
   background: #2196F3;
   box-shadow: 0px 0px 2px rgb(0 0 0 / 12%), 0px 2px 2px rgb(0 0 0 / 24%);
   color: #FFFFFF;
-}
-
-.cancel-button {
-  width: 93px;
-  height: 36px;
-  background: #E3F2FD;
-  box-shadow: 0px 0px 2px rgb(0 0 0 / 12%), 0px 2px 2px rgb(0 0 0 / 24%);
-  color: #2196F3;
 }
