--- a/match-match-game/src/components/navbar-card/navbar-card.css
+++ b/match-match-game/src/components/navbar-card/navbar-card.css
@@ -18,9 +18,10 @@ a:link{
   text-decoration: none;
 }
 
-.navbar-card img {
+.card-icon {
   width: 24px;
   height: 24px;
+  background-repeat: no-repeat;
 }
 
 .navbar-card span {
