--- a/match-match-game/src/components/game-settings/game-settings.css
+++ b/match-match-game/src/components/game-settings/game-settings.css
@@ -5,4 +5,6 @@
   border: 1px;
   background: #FFFFFF;
   box-shadow: 0px 6px 5px rgb(0 0 0 / 24%), 0px 9px 18px rgb(0 0 0 / 18%);
+  display: flex;
+  flex-direction: column;
 }
