--- a/match-match-game/src/components/card/card.css
+++ b/match-match-game/src/components/card/card.css
@@ -6,6 +6,7 @@
   justify-content: space-around;
   perspective: 25rem;
   cursor: pointer;
+  position: relative;
 }
 
 .card-container:hover > .card {
@@ -14,16 +15,9 @@
 }
 
 .card {
-  /* width: auto; */
-  /* height: auto; */
-  /* width: 168px; */
-  /* height: 168px; */
-  /* width: 150px; */
-  /* height: 256px; */
   width: 102px;
   height: 175px;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
-  position: relative;
   transform-style: preserve-3d;
   transform-origin: right;
   transition: all .5s;
@@ -62,14 +56,6 @@
   transform-origin: left;
 }
 
-/* .card-container.flipped .card-front,
-.card-container.flipped .match,
-.card-container.flipped .discrepancy,
-.card:hover .card-front,
-.card:hover .match,
-.card:hover .discrepancy {
-  display: block;
-} */
 
 .mask {
   position: absolute;
@@ -77,20 +63,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
 }
 
-.match {
-  display: none;	
-  width: 100%;
-  height: 100%;
-  background: rgba(10, 207, 131, 0.5)
+.match .mask {
+  background: rgba(10, 207, 131, 0.5);
 }
 
-.discrepancy {
-  display: none;	
-  width: 100%;
-  height: 100%;
+.discrepancy .mask {
   background: rgba(242, 78, 30, 0.5)
 }
 
@@ -101,8 +80,8 @@
 }
 
 .mask-icon {
-  margin-top: 10px;
-  margin-right: 11px;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
 .match .mask-icon {
